RANGER-5810: Rewrite README for Docker Hub installs, JDK 17 builds and PR workflow
Also updates the GitHub repository description in .asf.yaml.